# ChangeLog for metro 
# Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2
# Portions Copyright 1999-2007 Gentoo Foundation;

*metro-1.2.3 (02 Feb 2008)

  02 Feb 2008; Daniel Robbins <drobbins@funtoo.org>: New feature enhancement
  release: "package cache" support for stage1/stage2/stage3/stage3-quick,
  every build has its own private compiler cache directory, reworking of
  directory structure for caches in /var/tmp/metro, stage3-quick build fix,
  tar command-line rsync snapshot fix from Yannick Chabanois
  (yannickchabanois@zugaina.org), probe enhancements and normalization,
  Phenom support from VÃ­ctor RomÃ¡n Archidona <daijo@daijo.o>, world file
  fix.

*metro-1.2.2 (19 Dec 2008)

  19 Dec 2008; Daniel Robbins <drobbins@funtoo.org>: Parser bug fix
*metro-1.2.1 (17 Dec 2008)

  17 Dec 2008; Daniel Robbins <drobbins@funtoo.org>: New release: fix a
  couple of silly bugs.

*metro-1.2 (15 Dec 2008)

  15 Dec 2008; Daniel Robbins <drobbins@funtoo.org>: New release:
  The 1.2 release contains quite a few 
  * NEW target: "stage3-freshen" uses emerge -up world to update stage
  * NEW target: "stage3-quick" builds stage3->stage3, skipping stage1 and 2.
  * NEW target: "git-snapshot" creates a full .tar.bz2 snapshot of git repo
    with the .git directory intact, so it is a full working git repo when
    unpacked.
  * NEW target: "emerge" for adding packages to an existing stage3
  * NEW subarch: ~core2 for Intel Core 2 series processors. Supported with
    gcc 4.3.2 which is in the funtoo build.
  * Updated targets: "openvz" updated to support OpenRC 0.4.0.
  * stage3-freshen supports emerge/packages/force target, which is a list
    of packages to rebuild using "emerge <packages>". This is a great way
    to force a rebuild of packages that may need to be rebuilt but did not
    get a rev-bump (ie. openrc.:)
  * Metro now properly cleans /var/tmp/metro after it is done, unless the
    build aborted due to an error.