@@ -6,7 +6,7 @@ name: funtoo
 [section portage]
 
 stable: ~
-name: portage-$[target/version]
+name: portage
 MAKEOPTS: -j2
 USE:
 
@@ -34,3 +34,19 @@ options: pull
 
 options/stage: cache/package cache/compiler
 target: gentoo
+
+[section multi]
+
+targets: git-snapshot $[multi/targets/core] openvz vserver
+
+[section multi when multi/mode is full]
+
+targets/core: stage1 stage2 stage3
+
+[section multi when multi/mode is quick]
+
+targets/core: stage3-quick
+
+[section multi when multi/mode is freshen]
+
+targets/core: stage3-freshen
