@@ -32,5 +32,22 @@ options: pull
 
 [section metro]
 
-options/stage: cache/compiler
+options/stage: cache/compiler cache/package
 target: gentoo
+
+[section multi]
+
+targets: snapshot $[multi/targets/core]
+
+[section multi when multi/mode is full]
+
+targets/core: stage1 stage2 stage3
+
+[section multi when multi/mode is quick]
+
+targets/core: stage3-quick
+
+[section multi when multi/mode is freshen]
+
+targets/core: stage3-freshen
+
