@@ -12,21 +12,22 @@
 
 [section path/mirror]
 
-snapshot: $[]/$[local/name]/snapshots/$[portage/name].tar.bz2
+snapshot: $[]/$[local/name]/snapshots/$[portage/name]-$[target/version].tar.bz2
+
+[when target/type is snapshot git-snapshot]
+
+# "current" symlink:
+link: $[]/$[local/name]/snapshots/$[portage/name]-current.tar.bz2
+link/dest: $[portage/name]-$[target/version].tar.bz2
 
 [when target/type is stage]
 
 source: $[]/$[local/name]/$[source/subarch]/$[local/name]-$[source/subarch]-$[source/version]/$[source/name].tar.bz2 
 target: $[]/$[local/name]/$[target/subarch]/$[local/name]-$[target/subarch]-$[target/version]/$[target/name].tar.bz2 
 
-# this is used for our "current" symlink - a link to our most recent build that build.sh creates:
-
-stage3/current: $[]/$[local/name]/$[target/subarch]/$[target/name/current].tar.bz2
-
-# the destination of the symlink, which should be relative so that it is still valid after being
-# mirrored:
-
-stage3/current/dest: $[local/name]-$[target/subarch]-$[target/version]/$[target/name].tar.bz2
+# "current" symlink:
+link: $[]/$[local/name]/$[target/subarch]/$[target/name/current].tar.bz2
+link/dest: $[local/name]-$[target/subarch]-$[target/version]/$[target/name].tar.bz2
 
 [when target/subarch]
 
@@ -56,7 +57,7 @@ name: $[source]-$[source/subarch]-$[source/version]
 
 [section target when target/type is snapshot git-snapshot]
 
-name: $[portage/name]
+name: $[portage/name]-$[target/version]
 
 # EMERGE
 
@@ -66,7 +67,7 @@ name: $[portage/name]
 
 # STAGE1
 
-[section source when target is stage1]
+[section source when target is stage1 stage3-quick stage3-freshen]
 
 : stage3
 
@@ -95,12 +96,6 @@ subarch: $[target/subarch]
 
 # STAGE3-QUICK, STAGE3-FRESHEN
 
-[section source when target is stage3-quick stage3-freshen]
-
-: stage3
-version: << $[path/mirror/control]/lastdate
-subarch: << $[path/mirror/control]/subarch
-
 [section target when target is stage3 stage3-quick stage3-freshen emerge]
 
 name: stage3-$[target/subarch]-$[target/version]
@@ -110,5 +105,28 @@ name/current: stage3-$[target/subarch]-current
 
 name: $[target]-$[target/subarch]-$[target/version]
 name/current: $[target]-$[target/subarch]-current
+
+[section trigger when target is stage3 stage3-freshen stage3-quick]
+
+ok/run: [
+#!/bin/bash
+
+# UPDATE lastdate and subarch for our next build:
+echo "$[target/version]" > $[path/mirror/control]/lastdate || exit 1
+echo "$[target/subarch]" > $[path/mirror/control]/subarch || exit 2
+
+# CREATE current symlink for the stage3
+rm -f $[path/mirror/link]
+ln -s $[path/mirror/link/dest] $[path/mirror/link] || exit 3
+]
+
+[section trigger when target is snapshot git-snapshot]
+
+ok/run: [
+#!/bin/bash
+# CREATE current symlink for the snapshot
+rm -f $[path/mirror/link]
+ln -s $[path/mirror/link/dest] $[path/mirror/link] || exit 3
+]
 
 
