@@ -12,7 +12,7 @@
 
 [section path/mirror]
 
-snapshot: $[]/$[local/name]/snapshots/$[portage/name].tar.bz2
+snapshot: $[]/$[local/name]/snapshots/$[portage/name]-$[target/version].tar.bz2
 
 [when target/type is stage]
 
@@ -58,7 +58,7 @@ name: $[source]-$[source/subarch]-$[source/version]
 
 [section target when target/type is snapshot git-snapshot]
 
-name: $[portage/name]
+name: $[portage/name]-$[target/version]
 
 # EMERGE
 
