@@ -26,8 +26,8 @@ probe: $[path/cache/build]/probe
 
 [section path/mirror]
 
-: /var/tmp/metro/mirror
-[collect /etc/metro/fslayouts/hollow.conf]
+: /home/mirror/linux
+[collect /etc/metro/fslayouts/funtoo.conf]
 
 #Probes disabled by default:
 [collect $[path/metro]/features/probe.conf]
