@@ -27,14 +27,11 @@ SANDBOX_ON=1
 ]
 
 setup: [
-if [ -d /var/tmp/cache/probe ]
-then
-	install -d /etc/portage
-	# the " around EOF prevents variables from getting expanded - it's a bash feature
-	cat << "EOF" > /etc/portage/bashrc
-	$[[probe/bashrc]]
+install -d /etc/portage
+# the " around EOF prevents variables from getting expanded - it's a bash feature
+cat << "EOF" > /etc/portage/bashrc
+$[[probe/bashrc]]
 EOF
-fi
 ]
 
 
