@@ -28,7 +28,9 @@ def usage():
  
  -d, --debug			Enable debug mode
  -v, --verbose			Verbose mode
- 
+
+ -N, --notrigger		Disable build triggers
+
  -k [key], --key [key]		Print value of [key], ie. "distfiles"
 
  [FILE]				File(s) to parse and evaluate
@@ -61,6 +63,33 @@ def find_target(settings):
 	return targets.__dict__[settings["metro/class"]](settings)
 	
 debug=False
+
+def initSettings(args,extraargs={}):
+	settings=flexdata.collection()
+
+	if os.path.exists("/etc/metro/metro.conf"):
+		settings.collect("/etc/metro/metro.conf",None)
+	else:
+		print "Warning: /etc/metro/metro.conf not found."
+	
+	# parse command-line supplied configuration files and spec files in the order they were specified
+
+	apos = 0
+
+	while apos < len(args):
+		if args[apos][-1] == ":":
+		# args such as: target/version: 2008.10.12 - parse both of these args
+			if apos+1 >= len(args):
+				raise MetroError, "Missing value argument for %s" % args[apos]
+			settings[args[apos][:-1]] = args[apos+1]
+			apos += 2
+		else:
+			settings.collector.append(args[apos])
+			apos += 1
+	for arg in extraargs.keys():
+		settings[arg]=extraargs[arg]
+	settings.runCollector()
+	return settings	
 
 	
 def main():
@@ -126,59 +155,36 @@ def main():
 		else:
 			valueme=optdict["--key"]
 
-	settings=flexdata.collection()
+	# Step 5: Initialize Metro data:
 
-	if os.path.exists("/etc/metro/metro.conf"):
-		settings.collect("/etc/metro/metro.conf",None)
-	else:
-		print "Warning: /etc/metro/metro.conf not found."
-	
-	# parse command-line supplied configuration files and spec files in the order they were specified
+	settings = initSettings(args)
 
-	apos = 0
+	# Step 6: Create list of targets to run, checking whether "multi" mode is enabled
 
-	while apos < len(args):
-		if args[apos][-1] == ":":
-		# args such as: target/version: 2008.10.12 - parse both of these args
-			if apos+1 >= len(args):
-				raise MetroError, "Missing value argument for %s" % args[apos]
-			settings[args[apos][:-1]] = args[apos+1]
-			apos += 2
-		else:
-			settings.collector.append(args[apos])
-			apos += 1
-	
-	settings.runCollector()
-	
-
-
-	# "target" is now a new object, constructor has run. We have validated that we have all required values.
-	
-	# However - we could still have some bad data -
-	# since settings should now be all defined, now we can go through all the settings now and make sure we don't have any bad
-	# references in our spec data, like foo: $[bar] and not having bar defined. If we find problems, checkconfig() will alert
-	# the user and abort:
-
-	#target.checkconfig(strict)
-	
-	# OK, we have all required values - our config is good - now we can run the target
 	if valueme:
 		print settings[valueme]
-	elif not settings.has_key("target"):
-		raise MetroError("Please specify a target.")
+	if settings.has_key("multi") and settings["multi"]=="yes":
+		targetlist=string.split(settings["multi/targets"])
+		# build automation mode
+	elif settings.has_key("target"):
+		targetlist=[settings["target"]]
 	else:
+		raise MetroError("Please specify a target or enable multi mode.")
+	print 'DEBUG: targetlist',targetlist
+	for targetname in targetlist:
+		# Step 7a,b: Reinitialize settings, initialize target element to proper value:
+
+		print "Multi-mode: running target %s" % targetname
+		settings = initSettings(args,{"target":targetname})
+		
+		# Step 7c: find and run target
+		
 		target = find_target(settings)
 		print __app__+": running target \""+settings["target"]+"\"."
 		target.run()
-
-		# Now that the target has run, we want to clean up our temporary work space. cleanup() does this.
-		# TODO: ADD SOMETHING HERE TO CLEAN UP ALL PATHS WE'VE USED...
-		#target.cleanPath()
-
-		# We're all done.
-
 		print __app__+": complete."
-	
+
+
 try:		
 	main()
 except MetroError,arg:
