@@ -13,11 +13,13 @@ do_help() {
 
   Metro Automation Engine Script
   by Daniel Robbins (drobbins@funtoo.org)
-  and Benedikt Böhm (hollow@gentoo.org)
 
-  Usage: $0 arch [buildtype] [version]
-  Examples: $0 amd64
-            $0 amd64 quick
+  Usage: $0 arch [ full|freshen|quick [date] ]
+  Examples: i
+  	# $0 amd64
+	# $0 ~core2 freshen
+	# $0 pentium full 2009.01.03
+
 EOF
 }
 
@@ -32,68 +34,28 @@ then
 	die "This script requires one, two or three arguments"
 fi
 
-SUBARCH=$1
-
-if [ $# -gt 1 ]
+if [ "$#" = "2" ] || [ "$#" = "3" ]
 then
-	BUILDTYPE=$2
+	MODE=$2
 else
-	BUILDTYPE=full
+	MODE=full
 fi
 
-if [ $# -eq 3 ]
+if [ "$#" = "3" ]
 then
-	CURDATE=$3
+	VERS=$3
 else
-	CURDATE=`date +%Y%m%d`
-fi
+	VERS=`date +%Y.%m.%d`
+fi 
 
-if [ "$BUILDTYPE" = "full" ]
+SUBARCH="$1"
+if [ "${SUBARCH:0:1}" = "~" ] 
 then
-	builds="stage1 stage2 stage3"
-elif [ "$BUILDTYPE" = "quick" ]
-then
-	builds="stage3-quick"
-elif [ "$BUILDTYPE" = "freshen" ]
-then
-	builds="stage3-freshen"
+	BUILD="funtoo"
 else
-	die "Build type \"$BUILDTYPE\" not recognized."
+# for stable builds, we create a traditional portage snapshot that is just a tarball of the physical files
+	BUILD="gentoo"
 fi
 
-builds="snapshot $builds vserver"
-mb="hollow"
-
-MAINARGS="metro/build: $mb target/subarch: $SUBARCH target/version: $CURDATE"
-CONTROL=`metro -k path/mirror/control $MAINARGS`
-
-if [ ! -d "$CONTROL" ]
-then
-	die "Control directory $CONTROL (from 'metro -k path/mirror/control $MAINARGS') does not exist."
-fi
-
-do_everything() {
-	echo "Starting..."
-	for x in $builds 
-	do
-		metro $MAINARGS target: $x || die "$x fail: metro $MAINARGS target: $x"
-		if [ "${x:0:6}" = "stage3" ]
-		then
-			# Did we just complete a stage3* build? OK, then
-			# record a successful build so we use our new stage3 as a seed stage3 for next time.
-			echo $CURDATE > $CONTROL/lastdate
-			echo $SUBARCH > $CONTROL/subarch
-		fi
-
-		if [ "${x:0:6}" = "stage3" ] || [ "${x}" = "vserver" ]
-		then
-			CURRENT=`metro -k path/mirror/stage3/current $MAINARGS target: $x`
-			TARGET=`metro -k path/mirror/stage3/current/dest $MAINARGS target: $x`
-			# update current symlink
-			rm -f "$CURRENT"
-			ln -s "$TARGET" "$CURRENT"
-		fi
-	done
-}
-
-do_everything
+/usr/bin/metro multi: yes metro/build: $BUILD target/subarch: $SUBARCH target/version: $VERS multi/mode: $MODE 
+exit $?
