@@ -2,9 +2,16 @@
 # Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2
 # Portions Copyright 1999-2007 Gentoo Foundation;
 
-*metro-1.2.3 (02 Feb 2008)
+*metro-1.3.0 (18 Mar 2009)
 
-  02 Feb 2008; Daniel Robbins <drobbins@funtoo.org>: New feature enhancement
+  18 Mar 2009; Daniel Robbins <drobbins@funtoo.org>: New feature enhancement
+  release.
+
+
+
+*metro-1.2.3 (02 Feb 2009)
+
+  02 Feb 2009; Daniel Robbins <drobbins@funtoo.org>: New feature enhancement
   release: "package cache" support for stage1/stage2/stage3/stage3-quick,
   every build has its own private compiler cache directory, reworking of
   directory structure for caches in /var/tmp/metro, stage3-quick build fix,
